User docs(history and change role)
